--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
   <header>
     <div class="header-inner">
-      <div class="brand">🔗 Asocia</div>
+      <div class="brand"> Correlate</div>
       <div class="userbar">
         <span class="pill" id="userTag">Sin usuario</span>
         <span class="pill">⭐ <span id="scoreTag">0</span></span>
